评论系统-1.1 CSS改进保留评论中的换行符

--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,6 +1,6 @@
 <script src="{{ url_for('static',filename='js/comment.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static',filename='css/comment.css') }}">
-<div class="container-fluid">
+<div class="container-fluid" style="padding-left: 0;padding-right: 0;">
     <hr>
     <div class="bg-primary p-4 text-light rounded" id="reply_inform">
         <p>你即将回复 <span id="comment_sequence"></span> 的 <span id="comment_author"></span> 的评论：</p>
@@ -9,7 +9,7 @@
             <button class="btn btn-light" id="btn_cancel_reply">取消回复</button>
         </div>
     </div>
-    <div id="form_container" class="border border-primary rounded px-4 py-2 my-3">
+    <div id="form_container" class="border rounded px-4 py-2 my-3">
         <form id="comment_form">
             <div class="row">
                 <div class="col-12 col-md-6">
@@ -32,7 +32,7 @@
             <input type="hidden" name="replyToSeq" id="comment_replyToSeq">
         </form>
     </div>
-    <div id="comment_container" class="border border-primary rounded p-4 my-2"></div>
+    <div id="comment_container" class="border rounded p-4 my-2"></div>
 </div>
 
 <div class="modal fade" id="fail_comment" tabindex="-1">
